--- a/ecommerce.ipynb
+++ b/ecommerce.ipynb
@@ -2122,7 +2122,7 @@
       "source": [
         "### Observations\n",
         "\n",
-        "* When comparing total sales and total purchase counts accross income groups, the lowest income group spent the least per transaction (mean \\$135.95), and the hightest income group spent the most per transaction (mean \\$261.94). While the 40K-55K income group produces the lowest mean revenue per transaction, they're total sales is second highest.\n",
+        "* When comparing total sales and total purchase counts accross income groups, the lowest income group spent the least per transaction (\mean \$135.95), and the hightest income group spent the most per transaction (\mean \$261.94). While the 40K-55K income group produces the lowest mean revenue per transaction, they're total sales is second highest.\n",
         "* The income group responsible for the hightest sales is in the 70K-85K range"
       ],
       "metadata": {
