--- a/ecommerce.ipynb
+++ b/ecommerce.ipynb
@@ -1707,7 +1707,7 @@
       "source": [
         "## Observations\n",
         "\n",
-        "* Both time on time on site and annual income appear to be positively corelated with mean spending per transaction\n",
+        "* Both time on site and annual income appear to be positively corelated with mean spending per transaction\n",
         "* A significant portion of the sample's mean incomes fall within the 40,000 to 70,000 range. Income groups may be a more useful way to aggregate total data for better insight."
       ],
       "metadata": {
